refactor: 프트폴리오 정보 반환 로직 가독성 개선